--- a/assets/css/about-me.css
+++ b/assets/css/about-me.css
@@ -1,5 +1,4 @@
 /***************ABOUT-ME********************/
-
 .about-me {
     border-top: 10px solid black;
     border-right: 6px solid black;
@@ -9,9 +8,11 @@
 /***************ABOUT-TITLE********************/
 .about-me-content .about-title .slider {
     background-color: yellow;
-    height: 30px;
+    height: 40px;
     width: 200px;
-    margin-top: 12px;
+    margin-top: 8px;
+    margin-left: 10px;
+    line-height: 50px;
 }
 
 .about-me-content .about-title .slider h1 {
@@ -22,10 +23,10 @@
 
 .about-me-content .about-title p {
     color: #ccc;
+    line-height: 1.5;
 }
 
 /***************WEB-DESIGNER********************/
-
 .web-designer .web-designer-developer h2 {
     font-size: 1.5rem;
 }
@@ -64,7 +65,7 @@
 
 .web-designer-developer .items-line p {
     margin-top: 20px;
-    text-wrap: nowrap;
+    /* text-wrap: nowrap; */
 }
 
 .web-designer-developer .items-line span {
@@ -96,23 +97,18 @@
     font-size: 1.5rem;
 }
 
-.services .services-line .services-line-items img {
+.services-line-1 .services-line-item-1 img {
     display: flex;
-    margin: 0 auto;
+    margin: auto;
 }
 
-.services .services-line .services-line-items h5 {
+.services-line-1 .services-line-item-1 h5 {
     text-align: center;
-}
-
-.services .services-line .services-line-items p {
-text-align: center;
-    width: 100%;
 }
 
 /****************CONTAINER-2******************/
 .container-2{
-    margin-top: 20%;
+    margin-top: 9%;
 }
 
 .about-me-suite {
@@ -121,30 +117,90 @@ text-align: center;
     border-bottom: 10px solid black;
 }
 
-
 /**********CONTAINER-SUITE***********/
 
-.clients{
-    margin-top: -3%;
-}
-.clients h6 {
-    font-size: 1.5rem;
+.services-line-2 .services-line-item-2 img {
+    display: flex;
+    margin: auto;
 }
 
-.clients .clients-line .clients-line-items img {
+.services-line-2 .services-line-item-2 h5 {
+    text-align: center;
+}
+
+.clients h6 {
+    font-size: 1.5rem;
+    margin-top: -1%;
+}
+
+.clients .clients-line .clients-line-item img {
     display: flex;
-    margin: 0 auto;
+    margin: -35px auto;
+   
 }
 
 /********FUN FACTS*******/
 
 .fun-facts h6 {
     font-size: 1.5rem;
+    margin-top: 5%;
 }
 
-.fun-facts-line img {
+.fun-facts-line{
+    padding: 20px 30px;
+    margin-top: -5%;
+}
+
+.fun-facts-line .fun-facts-line-item{
+    height: 100px;
+    padding: 10px;
+    font-size: 15px;
+}
+
+.fun-facts-line .fun-facts-line-item img{
     display: flex;
-    margin: 0 auto;
+    margin: -35px auto;   
+}
+
+.fun-facts-line .fun-facts-line-item p{
+    text-align: center;     
+    margin: 50px 0px;
+}
+
+.fun-facts-line .fun-facts-line-item p:nth-child(3){
+    text-align: center;
+    margin-top: -35px;
+    color: yellow;
+    font-size: 25px;
+    font-weight: bold;   
+}
+
+.fun-facts-line .fun-facts-line-item:nth-child(1){
+    padding-top: 40px;
+    margin: 0px 20px;
+    background-color:hsl(0, 8%, 97%);
+    box-shadow: 0px 1px 4px #ccc;
+}
+
+.fun-facts-line .fun-facts-line-item:nth-child(2){
+    padding-top: 40px;
+    margin: 0px 20px;
+    background-color:hsl(0, 100%, 100%);
+    box-shadow: 0px 1px 4px #ccc;
+}
+
+.fun-facts-line .fun-facts-line-item:nth-child(3){
+    padding-top: 40px;
+    margin: 0px 20px;
+    background-color:hsl(0, 8%, 97%);
+    box-shadow: 0px 1px 4px #ccc;
+}
+
+.fun-facts-line .fun-facts-line-item:nth-child(4){
+    padding-top: 40px;
+    margin: 0px 20px;
+    background-color:hsl(0, 100%, 100%);
+    box-shadow: 0px 1px 4px #ccc;
 }
 
 /***************MEDIA QUERY****************/
@@ -164,8 +220,7 @@ text-align: center;
         padding-right: 90px;
     }
 
-
-    .slider-nav p {
+    .slider-nav p span{
         display: none;
     }
 
@@ -210,7 +265,6 @@ text-align: center;
         margin: 0 auto !important;
     }
 
-
     .services h4 {
         font-size: 1.5rem;
         margin-top: 60px;
@@ -253,7 +307,6 @@ text-align: center;
         padding: 8px 8px;
     }
 
-
     .slider-nav p {
         display: none;
     }
@@ -285,12 +338,6 @@ text-align: center;
         font-size: 1.5rem;
     }
 
-    .about-me {
-        border-top: none;
-        border-left: 6px solid black;
-        border-bottom: 10px solid black;
-    }
-
     .web-designer-developer h1,
     h2,
     h3,
@@ -315,27 +362,63 @@ text-align: center;
     .services h3 {
         font-size: 1.5rem;
     }
-
-    .services-line-items:nth-child(1) h5,
+    
+    .services-line-1 .services-line-item-1:nth-child(1) h5,
     .services-line-items p {
         display: none;
     }
 
-    .services-line-items:nth-child(2) {
+    .services-line-item-1:nth-child(1) {
+        margin: 0 auto;
+    }
+    .services-line-item-1:nth-child(2) {
         display: none;
     }
 
-    .services-line-items:nth-child(3) {
+    .services-line-item-1:nth-child(3) {
         display: none;
     }
 
-    .services-line-items:nth-child(4) {
+    .services-line-item-1:nth-child(4) {
         display: none;
+    }
+    
+    .services-line-item-1 p {
+       display: none;
     }
 
     .container-suite{
         display: none;
     }
 
+}
+
+@media screen and (max-width: 1200px) {
+    .aside {
+        border-top: 10px solid black;
+        border-right: 6px solid black;
+        border-bottom: none;
+        box-shadow: 1px 2px 4px #ccc;
+    }
+
+    .slider-nav h1 {
+        padding: 8px 8px;
+    }
+
+    .slider-nav p {
+        display: none;
+    }
+
+    /**************ABOUT-CONTENT-TITLE***************/
+    .about-me {
+        border-top: none;
+        border-left: 6px solid black;
+        border-bottom: 10px solid black;
+    }
+
+    .container-suite{
+        display: none;
+    }
+  
 }
 
