--- a/assets/css/framework/framework.css
+++ b/assets/css/framework/framework.css
@@ -45,6 +45,26 @@
     display: block;
 }
 
+/*************PADDING**************/
+
+.p-5{
+    padding: 5px;
+}
+.p-10{
+    padding: 10px;
+}
+.p-15{
+    padding: 15px;
+}
+.p-20{
+    padding: 20px;
+}
+.p-25{
+    padding: 255px;
+}
+.p-30{
+    padding: 30x;
+}
 /*************MARGIN**************/
 
 .m-5{
