--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-
 @import url(/assets/css/framework/framework.css);
-@import url(/assets/css/style.css);
 @import url(/assets/css/about-me.css);
+@import url(/assets/css/resume.css);
+@import url(/assets/css/style.css);
