--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,3 +2,5 @@
 @import url(/assets/css/about-me.css);
 @import url(/assets/css/resume.css);
 @import url(/assets/css/style.css);
+@import url(/assets/css/portfolio.css);
+@import url(/assets/css/contact.css);
