--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,7 @@ body {
     grid-area: aside;
     color: black;
     text-align: center;
-    border-left: 6px solid black;
-    border-right: 6px solid whitesmoke;
+    border-left: 6px solid black;   
     border-top: 10px solid black;
     border-bottom: 10px solid black;
     background-color: white;
@@ -137,8 +136,9 @@ border-bottom: 2px solid yellow;
     .aside {
         border-top: 10px solid black;
         border-right: 6px solid black;
+        border-left: 6px solid black;
         border-bottom: none;
-        background-color: #fff;
+        
     } 
 
     .slider-nav{
@@ -153,7 +153,7 @@ border-bottom: 2px solid yellow;
     .navbar::before {
         content: "\2630";
         position: absolute;
-        top: 2%;
+        top: 1.5%;
         right: 5%;
         font-size: 1.2rem;
         color: black;
@@ -161,19 +161,20 @@ border-bottom: 2px solid yellow;
         cursor: pointer;
     }
 
-    nav .slider-nav h1 {
-        margin-left: -80%;
+    .slider-nav h1 {
+        margin-left: -80% !important;
         line-height: 1;
         color: black;  
     }
     
     nav .slider-nav p{
         display: block;
-        position: absolute;
+        position: relative;
         font-size: 18px;
-        top: 31%;
+        top: 148px;
         left: 0;
         right: 0;
+        color: #ccc;
     }
     
     .home {
@@ -209,3 +210,18 @@ border-bottom: 2px solid yellow;
     } 
 
 } 
+
+@media screen and (max-width: 550px) {
+    .navbar::before {
+        content: "\2630";
+        position: absolute;
+        top: 1.5%;
+        right: 6% !important;
+    }
+    nav .slider-nav h1 {
+        padding-left: -70% !important;
+        line-height: 1;
+        color: black;  
+    }
+}
+
