--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,20 +2,21 @@
 body {
     margin: 0;
     padding: 0;
-    font-family:'Times New Roman', Times, serif;
+    font-family: "Gupter", serif;
     height: 100vh;
     padding: 10px;
 }
 
+
 /****************ASIDE*******************/
 .aside {
-    grid-area: aside;
-    color: black;
     text-align: center;
-    border-left: 6px solid black;   
     border-top: 10px solid black;
+    border-left: 6px solid black;
+    border-right: 6px solid #dbdbdb; 
     border-bottom: 10px solid black;
-    background-color: white;
+    background-color: white; 
+    color: black;
 }
 
 nav .slider-nav{
@@ -47,13 +48,14 @@ nav ul {
 }
 
 nav ul li {
-    display: grid;
     text-decoration: none;
     padding: 10px;
+    border: 0.01px solid #f6f6eb;
+    background-color: #ffffffe8;
 }
 
 nav ul li:hover{
-    background-color: rgb(208, 207, 207);
+    background-color: rgb(235, 235, 215);
     cursor: pointer;
 }
 
@@ -90,7 +92,18 @@ nav ul li a:hover{
     border-right: 6px solid black;
     border-bottom: 10px solid black;
     color: white;
+    animation: rotate 2s;
 }
+
+@keyframes rotate{
+    to{
+        transform: rotate(0deg);
+        margin-left: 0%;
+    }
+    from{
+        margin-left: 100%;
+   }
+} 
 
 .home .infos{
     margin-top: 15%;
@@ -150,11 +163,12 @@ border-bottom: 2px solid yellow;
         display: none;
     }
 
-    .navbar::before {
+    .slider-nav::before {
         content: "\2630";
         position: absolute;
-        top: 1.5%;
+        top: 0%;
         right: 5%;
+        line-height: 75px;
         font-size: 1.2rem;
         color: black;
         font-weight: bold;
@@ -181,6 +195,7 @@ border-bottom: 2px solid yellow;
         border-top: none;
         border-left: 6px solid black;
         border-bottom: 10px solid black;
+        animation: none;
     }
 
     .home .infos h2{
